English ZA: complete .lang update
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@107247 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/en-ZA/home.lang
+++ b/en-ZA/home.lang
@@ -3,35 +3,35 @@ Personalise
 
 
 ;One size doesn’t fit all.
-One size doesn’t fit all.
+One size doesn’t fit all. {ok}
 
 
 ;Go Fast
-Go Fast
+Go Fast {ok}
 
 
 ;Accelerate the way you use the web.
-Accelerate the way you use the web.
+Accelerate the way you use the web. {ok}
 
 
 ;Stay Safe
-Stay Safe
+Stay Safe {ok}
 
 
 ;We’ve got your back.
-We’ve got your back.
+We’ve got your back. {ok}
 
 
 ;Get Firefox on your phone!
-Get Firefox on your phone!
+Get Firefox on your phone! {ok}
 
 
 ;Made for sharing.
-Made for sharing.
+Made for sharing. {ok}
 
 
 ;Create <br/> dedicated <br/> tabs for it
-Create <br/> dedicated <br/> tabs for it
+Create <br/> dedicated <br/> tabs for it {ok}
 
 
 ;Customize <br/> to make <br/> it faster
@@ -39,48 +39,48 @@ Customise <br/> to make <br/> it faster
 
 
 ;Get add-ons <br/> and make <br/> it easier
-Get add-ons <br/> and make <br/> it easier
+Get add-ons <br/> and make <br/> it easier {ok}
 
 
 ;Works harder so <br /> you don't have to.
-Works harder so <br /> you don't have to.
+Works harder so <br /> you don't have to. {ok}
 
 
 ;Increased <br/> speed
-Increased <br/> speed
+Increased <br/> speed {ok}
 
 
 ;Easy to <br/> access tabs
-Easy to <br/> access tabs
+Easy to <br/> access tabs {ok}
 
 
 ;Productivity <br/> add-ons
-Productivity <br/> add-ons
+Productivity <br/> add-ons {ok}
 
 
 ;Made for <br/> the way you play.
-Made for <br/> the way you play.
+Made for <br/> the way you play. {ok}
 
 
 ;3D <br/> graphics
-3D <br/> graphics
+3D <br/> graphics {ok}
 
 
 ;Even more <br/> reliable
-Even more <br/> reliable
+Even more <br/> reliable {ok}
 
 
 ;Effortless <br/> customization
-Effortless <br/> customization
+Effortless <br/> customisation
 
 
 ;Advanced <br/> security
-Advanced <br/> security
+Advanced <br/> security {ok}
 
 
 ;Advanced <br/> graphics
-Advanced <br/> graphics
+Advanced <br/> graphics {ok}
 
 
 ;Improved <br/> reliability
-Improved <br/> reliability
+Improved <br/> reliability {ok}
