--- a/en-ZA/main.lang
+++ b/en-ZA/main.lang
@@ -1,169 +1,169 @@
 ;Navigation
-Navigation
+Navigation {ok}
 
 
 ;Press area
-Press area
+Press area {ok}
 
 
 ;About
-About
+About {ok}
 
 
 ;Store
-Store
+Store {ok}
 
 
 ;Donate
-Donate
+Donate {ok}
 
 
 ;Support
-Support
+Support {ok}
 
 
 ;Products
-Products
+Products {ok}
 
 
 ;Add-ons
-Add-ons
+Add-ons {ok}
 
 
 ;About Us
-About Us
+About Us {ok}
 
 
 ;Developers
-Developers
+Developers {ok}
 
 
 ;Labs
-Labs
+Labs {ok}
 
 
 ;skip to Navigation
-skip to Navigation
+skip to Navigation {ok}
 
 
 ;switch language
-switch language
+switch language {ok}
 
 
 ;Back to home page
-Back to home page
+Back to home page {ok}
 
 
 ;About Mozilla
-About Mozilla
+About Mozilla {ok}
 
 
 ;Get Involved
-Get Involved
+Get Involved {ok}
 
 
 ;Licensing
-Licensing
+Licensing {ok}
 
 
 ;Careers
-Careers
+Careers {ok}
 
 
 ;Press Center
-Press Center
+Press Centre
 
 
 ;Contact Us
-Contact Us
+Contact Us {ok}
 
 
 ;Site contact
-Site contact
+Site contact {ok}
 
 
 ;Other languages:
-Other languages:
+Other languages: {ok}
 
 
 ;%Y-%m-%d
-%Y-%m-%d
+%Y-%m-%d {ok}
 
 
 ;All rights reserved.
-All rights reserved.
+All rights reserved. {ok}
 
 
 ;Legal Notices
-Legal Notices
+Legal Notices {ok}
 
 
 ;Privacy Policy
-Privacy Policy
+Privacy Policy {ok}
 
 
 ;Visit Mozilla.com
-Visit Mozilla.com
+Visit Mozilla.com {ok}
 
 
 ;Visit Mozilla.com (in English)
-Visit Mozilla.com (in English)
+Visit Mozilla.com (in English) {ok}
 
 
 ;Download Firefox - Free
-Download Firefox - Free
+Download Firefox - Free {ok}
 
 
 ;Release Notes
-Release Notes
+Release Notes {ok}
 
 
 ;Other Systems and Languages
-Other Systems and Languages
+Other Systems and Languages {ok}
 
 
 ;Get Firefox
-Get Firefox
+Get Firefox {ok}
 
 
 ;Free Download
-Free Download
+Free Download {ok}
 
 
 ;Help us make Firefox even better!
-Help us make Firefox even better!
+Help us make Firefox even better! {ok}
 
 
 ;Take a few moments to take a quick survey and share your thoughts with us.
-Take a few moments to take a quick survey and share your thoughts with us.
+Take a few moments to take a quick survey and share your thoughts with us. {ok}
 
 
 ;Close
-Close
+Close {ok}
 
 
 ;(in English)
-(in English)
+(in English) {ok}
 
 
 ;Download Now - Free
-Download Now - Free
+Download Now - Free {ok}
 
 
 ;Return to top
-Return to top
+Return to top {ok}
 
 
 ;You should <a href="http://get.adobe.com/flashplayer/">update Adobe Flash Player</a> right now.
-You should <a href="http://get.adobe.com/flashplayer/">update Adobe Flash Player</a> right now.
+You should <a href="http://get.adobe.com/flashplayer/">update Adobe Flash Player</a> right now. {ok}
 
 
 ;Firefox is up to date, but your current version of Flash Player can cause security and stability issues.  Please <a href="http://get.adobe.com/flashplayer/">install the free update</a> as soon as possible.
-Firefox is up to date, but your current version of Flash Player can cause security and stability issues.  Please <a href="http://get.adobe.com/flashplayer/">install the free update</a> as soon as possible.
+Firefox is up to date, but your current version of Flash Player can cause security and stability issues.  Please <a href="http://get.adobe.com/flashplayer/">install the free update</a> as soon as possible. {ok}
 
 
 ;Features
-Features
+Features {ok}
 
 
 ;Customize
@@ -175,63 +175,63 @@ Synchronise
 
 
 ;Develop for Mobile
-Develop for Mobile
+Develop for Mobile {ok}
 
 
 ;Other Supported Platforms
-Other Supported Platforms
+Other Supported Platforms {ok}
 
 
 ;Other Platforms &amp; Languages
-Other Platforms &amp; Languages
+Other Platforms &amp; Languages {ok}
 
 
 ;Choose your location
-Choose your location
+Choose your location {ok}
 
 
 ;Download Firefox directly from your phone
-Download Firefox directly from your phone
+Download Firefox directly from your phone {ok}
 
 
 ;Download
-Download
+Download {ok}
 
 
 ;Next
-Next
+Next {ok}
 
 
 ;MB
-MB
+MB {ok}
 
 
 ;MegaBytes
-MegaBytes
+MegaBytes {ok}
 
 
 ;FAQ
-FAQ
+FAQ {ok}
 
 
 ;Videos
-Videos
+Videos {ok}
 
 
 ;Except where otherwise <a href="%s">noted</a>, content on this site is licensed under the <br /><a href="%s">Creative Commons Attribution Share-Alike License v3.0</a> or any later version.
-Except where otherwise <a href="%s">noted</a>, content on this site is licensed under the <br /><a href="%s">Creative Commons Attribution Share-Alike License v3.0</a> or any later version.
+Except where otherwise <a href="%s">noted</a>, content on this site is licensed under the <br /><a href="%s">Creative Commons Attribution Share-Alike License v3.0</a> or any later version. {ok}
 
 
 ;Report Trademark Abuse
-Report Trademark Abuse
+Report Trademark Abuse {ok}
 
 
 ;Free Upgrade
-Free Upgrade
+Free Upgrade {ok}
 
 
 ;Follow us on:
-Follow us on:
+Follow us on: {ok}
 
 
 ;Customize with Add-ons
@@ -239,164 +239,164 @@ Customise with Add-ons
 
 
 ;Sync Your Desktop & Mobile
-Sync Your Desktop & Mobile
+Sync Your Desktop & Mobile {ok}
 
 
 ;Learn More
-Learn More
+Learn More {ok}
 
 
 ;Watch the video
-Watch the video
+Watch the video {ok}
 
 
 ;WebM format
-WebM format
+WebM format {ok}
 
 
 ;Ogg Theora format
-Ogg Theora format
+Ogg Theora format {ok}
 
 
 ;MPEG-4 format
-MPEG-4 format
+MPEG-4 format {ok}
 
 
 ;Whoops! Be sure to enter a valid email address.
-Whoops! Be sure to enter a valid email address.
+Whoops! Be sure to enter a valid email address. {ok}
 
 
 ;Please read the Mozilla Privacy Policy and agree by checking the box.
-Please read the Mozilla Privacy Policy and agree by checking the box.
+Please read the Mozilla Privacy Policy and agree by checking the box. {ok}
 
 
 ;Please enter your email address and review the Mozilla Privacy Policy.
-Please enter your email address and review the Mozilla Privacy Policy.
+Please enter your email address and review the Mozilla Privacy Policy. {ok}
 
 
 ;Mobile
-Mobile
+Mobile {ok}
 
 
 ;Firefox Updated
-Firefox Updated
+Firefox Updated {ok}
 
 
 ;Take a Look at Tomorrow's Web
-Take a Look at Tomorrow's Web
+Take a Look at Tomorrow's Web {ok}
 
 
 ;Journey to the Future with Firefox
-Journey to the Future with Firefox
+Journey to the Future with Firefox {ok}
 
 
 ;Join the Beta Program
-Join the Beta Program
+Join the Beta Program {ok}
 
 
 ;Experience Firefox
-Experience Firefox
+Experience Firefox {ok}
 
 
 ;The future of the Web is waiting for you!
-The future of the Web is waiting for you!
+The future of the Web is waiting for you! {ok}
 
 
 ;The future of the Web starts now.
-The future of the Web starts now.
+The future of the Web starts now. {ok}
 
 
 ;Try Firefox with a fresh look and feel.
-Try Firefox with a fresh look and feel.
+Try Firefox with a fresh look and feel. {ok}
 
 
 ;Experience tomorrow's Web today.
-Experience tomorrow's Web today.
+Experience tomorrow's Web today. {ok}
 
 
 ;Check out the new look and feel of Firefox.
-Check out the new look and feel of Firefox.
+Check out the new look and feel of Firefox. {ok}
 
 
 ;Browse the future of the Web.
-Browse the future of the Web.
+Browse the future of the Web. {ok}
 
 
 ;See Firefox with a new look and feel.
-See Firefox with a new look and feel.
+See Firefox with a new look and feel. {ok}
 
 
 ;Download Beta Now.
-Download Beta Now.
+Download Beta Now. {ok}
 
 
 ;All Systems & Languages
-All Systems & Languages
+All Systems & Languages {ok}
 
 
 ;View Full Site
-View Full Site
+View Full Site {ok}
 
 
 ;Get Firefox for Android
-Get Firefox for Android
+Get Firefox for Android {ok}
 
 
 ;Download for <span>Android</span>
-Download for <span>Android</span>
+Download for <span>Android</span> {ok}
 
 
 ;Free from the Android Market
-Free from the Android Market
+Free from the Android Market {ok}
 
 
 ;Desktop
-Desktop
+Desktop {ok}
 
 
 ;Firefox Beta for mobile
-Firefox Beta for mobile
+Firefox Beta for mobile {ok}
 
 
 ;Firefox for mobile
-Firefox for mobile
+Firefox for mobile {ok}
 
 
 ;Email
-Email
+Email {ok}
 
 
 ;Mozilla Firefox. Bringing the modern Web to XP.
-Mozilla Firefox. Bringing the modern Web to XP.
+Mozilla Firefox. Bringing the modern Web to XP. {ok}
 
 
 ;Super speed
-Super speed
+Super speed {ok}
 
 
 ;Stunning graphics
-Stunning graphics
+Stunning graphics {ok}
 
 
 ;The latest technologies
-The latest technologies
+The latest technologies {ok}
 
 
 ;You're using an old version of Firefox. Get your update to stay safe! <br/> <a href="%s">Download the free upgrade</a> in less than a minute for the latest features, speed and security fixes.
-You're using an old version of Firefox. Get your update to stay safe! <br/> <a href="%s">Download the free upgrade</a> in less than a minute for the latest features, speed and security fixes.
+You're using an old version of Firefox. Get your update to stay safe! <br/> <a href="%s">Download the free upgrade</a> in less than a minute for the latest features, speed and security fixes. {ok}
 
 
 ;You need an upgrade! Stay safe in less than a minute. <br/> Start using your new Firefox for the best in browsing and customization on the Web. <br/>   It’s fast and free!
-You need an upgrade! Stay safe in less than a minute. <br/> Start using your new Firefox for the best in browsing and customization on the Web. <br/>   It’s fast and free!
+You need an upgrade! Stay safe in less than a minute. <br/> Start using your new Firefox for the best in browsing and customisation on the Web. <br/>   It’s fast and free!
 
 
 ;You're using an older version of Firefox. Get <a href="%s">your update</a> to stay safe! <br/> Experience the latest features, security fixes and the fastest Firefox yet. Download the free upgrade in less than a minute.
-You're using an older version of Firefox. Get <a href="%s">your update</a> to stay safe! <br/> Experience the latest features, security fixes and the fastest Firefox yet. Download the free upgrade in less than a minute.
+You're using an older version of Firefox. Get <a href="%s">your update</a> to stay safe! <br/> Experience the latest features, security fixes and the fastest Firefox yet. Download the free upgrade in less than a minute. {ok}
 
 
 ;Upgrade now
-Upgrade now
+Upgrade now {ok}
 
 
 ;Update now
-Update now
+Update now {ok}
