--- a/en-ZA/channelsposter.lang
+++ b/en-ZA/channelsposter.lang
@@ -1,85 +1,85 @@
 ;Firefox Release Channels
-Firefox Release Channels
+Firefox Release Channels {ok}
 
 
 ;Firefox Release Timeline
-Firefox Release Timeline
+Firefox Release Timeline {ok}
 
 
 ;The Mozilla release process delivers new features, performance immprovements and security upgrades to users every six weeks.
-The Mozilla release process delivers new features, performance immprovements and security upgrades to users every six weeks.
+The Mozilla release process delivers new features, performance immprovements and security upgrades to users every six weeks. {ok}
 
 
 ;This consists of four development channels producing concurrent releases of Firefox for Windows, Mac, Linux and Android.
-This consists of four development channels producing concurrent releases of Firefox for Windows, Mac, Linux and Android.
+This consists of four development channels producing concurrent releases of Firefox for Windows, Mac, Linux and Android. {ok}
 
 
 ;For:
-For:
+For: {ok}
 
 
 ;Enjoy:
-Enjoy:
+Enjoy: {ok}
 
 
 ;Expect:
-Expect:
+Expect: {ok}
 
 
 ;Early adopters and Mozilla fans
-Early adopters and Mozilla fans
+Early adopters and Mozilla fans {ok}
 
 
 ;Testing the next version of Firefox with stability
-Testing the next version of Firefox with stability
+Testing the next version of Firefox with stability {ok}
 
 
 ;Mostly stable builds that need fine tuning and majority add-on compatibility
-Mostly stable builds that need fine tuning and majority add-on compatibility
+Mostly stable builds that need fine tuning and majority add-on compatibility {ok}
 
 
 ;Everyone! Released to the more than 400 million Firefox users worldwide
-Everyone! Released to the more than 400 million Firefox users worldwide
+Everyone! Released to the more than 400 million Firefox users worldwide {ok}
 
 
 ;The polished and stable features of Firefox that move the Web forward with great performance and unparalleled customization
-The polished and stable features of Firefox that move the Web forward with great performance and unparalleled customization
+The polished and stable features of Firefox that move the Web forward with great performance and unparalleled customisation
 
 
 ;An awesome Web experience that answers to no one but you!
-An awesome Web experience that answers to no one but you!
+An awesome Web experience that answers to no one but you! {ok}
 
 
 ;Web/platform developers, early adopters and adventure seekers
-Web/platform developers, early adopters and adventure seekers
+Web/platform developers, early adopters and adventure seekers {ok}
 
 
 ;Access to experimental new features - your feedback helps determine what makes it to Beta
-Access to experimental new features - your feedback helps determine what makes it to Beta
+Access to experimental new features - your feedback helps determine what makes it to Beta {ok}
 
 
 ;Test builds with bugs and incompatible add-ons
-Test builds with bugs and incompatible add-ons
+Test builds with bugs and incompatible add-ons {ok}
 
 
 ;Platform developers and Mozilla contributors
-Platform developers and Mozilla contributors
+Platform developers and Mozilla contributors {ok}
 
 
 ;Access to cutting edge features still under active development
-Access to cutting edge features still under active development
+Access to cutting edge features still under active development {ok}
 
 
 ;Crashes, unstable test builds with bugs and incompatible add-ons
-Crashes, unstable test builds with bugs and incompatible add-ons
+Crashes, unstable test builds with bugs and incompatible add-ons {ok}
 
 
 ;6 weeks
-6 weeks
+6 weeks {ok}
 
 
 ;Awesomeness lands on Firefox Nightly
-Awesomeness lands on Firefox Nightly
+Awesomeness lands on Firefox Nightly {ok}
 
 
 ;Stabilize on Firefox Aurora
@@ -91,20 +91,20 @@ Stabilise on Firefox Beta
 
 
 ;Firefox Release!
-Firefox Release!
+Firefox Release! {ok}
 
 
 ;<i>More</i> awesomeness on Firefox Nightly
-<i>More</i> awesomeness on Firefox Nightly
+<i>More</i> awesomeness on Firefox Nightly {ok}
 
 
 ;<i>Even More</i> awesomeness on Firefox Nightly
-<i>Even More</i> awesomeness on Firefox Nightly
+<i>Even More</i> awesomeness on Firefox Nightly {ok}
 
 
 ;Timeline
-Timeline
+Timeline {ok}
 
 
 ;Release
-Release
+Release {ok}
