--- a/en-ZA/esr.lang
+++ b/en-ZA/esr.lang
@@ -1,14 +1,14 @@
 ;Download Firefox Extended Release Support for Your Organization, Business, Enterprise
-Download Firefox Extended Release Support for Your Organization, Business, Enterprise
+Download Firefox Extended Release Support for Your Organisation, Business, Enterprise
 
 
 ;Subscribe to the Enterprise Working Group (EWG) mailing list
-Subscribe to the Enterprise Working Group (EWG) mailing list
+Subscribe to the Enterprise Working Group (EWG) mailing list {ok}
 
 
 ;Full Name
-Full Name
+Full Name {ok}
 
 
 ;Subscribe
-Subscribe
+Subscribe {ok}
