--- a/en-ZA/newsletter.lang
+++ b/en-ZA/newsletter.lang
@@ -1,174 +1,190 @@
 ;Get Monthly News
-Get Monthly News
+Get Monthly News {ok}
 
 
 ;Your Email Address
-Your Email Address
+Your Email Address {ok}
 
 
 ;Text
-Text
+Text {ok}
 
 
 ;Available Languages
-Available Languages
+Available Languages {ok}
 
 
 ;Select country
-Select country
+Select country {ok}
 
 
 ;Whoops! Be sure to enter a valid email address.
-Whoops! Be sure to enter a valid email address.
+Whoops! Be sure to enter a valid email address. {ok}
 
 
 ;Please read the Mozilla Privacy Policy and agree by checking the box.
-Please read the Mozilla Privacy Policy and agree by checking the box.
+Please read the Mozilla Privacy Policy and agree by checking the box. {ok}
 
 
 ;I agree to the <a href="%s">Privacy Policy</a>
-I agree to the <a href="%s">Privacy Policy</a>
+I agree to the <a href="%s">Privacy Policy</a> {ok}
 
 
 ;Sign me up!
-Sign me up!
+Sign me up! {ok}
 
 
 ;We will only send you Mozilla-related information.
-We will only send you Mozilla-related information.
+We will only send you Mozilla-related information. {ok}
 
 
 ;Thanks for Subscribing!
-Thanks for Subscribing!
+Thanks for Subscribing! {ok}
 
 
 ;We look forward to soon begin sharing tips &amp; tricks on getting the most out of Firefox, as well as exciting news about Mozilla and how we’re working to create a better Web.
-We look forward to soon begin sharing tips &amp; tricks on getting the most out of Firefox, as well as exciting news about Mozilla and how we’re working to create a better Web.
+We look forward to soon begin sharing tips &amp; tricks on getting the most out of Firefox, as well as exciting news about Mozilla and how we’re working to create a better Web. {ok}
 
 
 ;Subscribe to monthly updates and keep current with Mozilla news, including the latest tips and tricks for getting the most out of your Firefox browser. It’s the perfect way for us to keep in touch!
-Subscribe to monthly updates and keep current with Mozilla news, including the latest tips and tricks for getting the most out of your Firefox browser. It’s the perfect way for us to keep in touch!
+Subscribe to monthly updates and keep current with Mozilla news, including the latest tips and tricks for getting the most out of your Firefox browser. It’s the perfect way for us to keep in touch! {ok}
 
 
 ;We just sent you a confirmation message by email. Click on the confirmation link in this email to validate your subscription to this mailing list.
-We just sent you a confirmation message by email. Click on the confirmation link in this email to validate your subscription to this mailing list.
+We just sent you a confirmation message by email. Click on the confirmation link in this email to validate your subscription to this mailing list. {ok}
 
 
 ;Read all about it in our <span>newsletter</span>
-Read all about it in our <span>newsletter</span>
+Read all about it in our <span>newsletter</span> {ok}
 
 
 ;Your newsletter subscription has been confirmed.
-Your newsletter subscription has been confirmed.
+Your newsletter subscription has been confirmed. {ok}
 
 
 ;Format
-Format
+Format {ok}
 
 
 ;You’re All Set! <span>But Wait, There’s More</span>
-You’re All Set! <span>But Wait, There’s More</span>
+You’re All Set! <span>But Wait, There’s More</span> {ok}
 
 
 ;Want to get the most relevant info? Tell us a little more about yourself. And while you’re here, sign up for other Mozilla news.
-Want to get the most relevant info? Tell us a little more about yourself. And while you’re here, sign up for other Mozilla news.
+Want to get the most relevant info? Tell us a little more about yourself. And while you’re here, sign up for other Mozilla news. {ok}
 
 
 ;Firefox & You
-Firefox & You
+Firefox & You {ok}
 
 
 ;Our Other Newsletters:
-Our Other Newsletters:
+Our Other Newsletters: {ok}
 
 
 ;Get the latest tips and tricks for getting the most out of your favorite browser.
-Get the latest tips and tricks for getting the most out of your favorite browser.
+Get the latest tips and tricks for getting the most out of your favourite browser.
 
 
 ;Firefox Mobile
-Firefox Mobile
+Firefox Mobile {ok}
 
 
 ;Learn about the hottest new add-ons and features for Firefox mobile.
-Learn about the hottest new add-ons and features for Firefox mobile.
+Learn about the hottest new add-ons and features for Firefox mobile. {ok}
 
 
 ;Beta News
-Beta News
+Beta News {ok}
 
 
 ;Read about the latest features for Firefox desktop and mobile before the final release.
-Read about the latest features for Firefox desktop and mobile before the final release.
+Read about the latest features for Firefox desktop and mobile before the final release. {ok}
 
 
 ;Let’s Be Friends!
-Let’s Be Friends!
+Let’s Be Friends! {ok}
 
 
 ;Firefox is also on your favorite social networking sites. Connect with us and join the conversation.
-Firefox is also on your favorite social networking sites. Connect with us and join the conversation.
+Firefox is also on your favourite social networking sites. Connect with us and join the conversation.
 
 
 ;Manage your <span>Newsletter Subscriptions</span>
-Manage your <span>Newsletter Subscriptions</span>
+Manage your <span>Newsletter Subscriptions</span> {ok}
 
 
 ;Subscribe
-Subscribe
+Subscribe {ok}
 
 
 ;Unsubscribe
-Unsubscribe
+Unsubscribe {ok}
 
 
 ;Check here if you’d like to be removed from all Mozilla emails
-Check here if you’d like to be removed from all Mozilla emails
+Check here if you’d like to be removed from all Mozilla emails {ok}
 
 
 ;Remove me from all Mozilla emails
-Remove me from all Mozilla emails
+Remove me from all Mozilla emails {ok}
 
 
 ;Save Preferences
-Save Preferences
+Save Preferences {ok}
 
 
 ;Thanks for updating your email preferences.
-Thanks for updating your email preferences.
+Thanks for updating your email preferences. {ok}
 
 
 ;You've been unsubscribed.
-You've been unsubscribed.
+You've been unsubscribed. {ok}
 
 
 ;We’re sorry to see you go. Would you mind telling us why you’re leaving?
-We’re sorry to see you go. Would you mind telling us why you’re leaving?
+We’re sorry to see you go. Would you mind telling us why you’re leaving? {ok}
 
 
 ;You send too many emails.
-You send too many emails.
+You send too many emails. {ok}
 
 
 ;Your content wasn't relevant to me.
-Your content wasn't relevant to me.
+Your content wasn't relevant to me. {ok}
 
 
 ;Your email design was too hard to read.
-Your email design was too hard to read.
+Your email design was too hard to read. {ok}
 
 
 ;I didn't sign up for this.
-I didn't sign up for this.
+I didn't sign up for this. {ok}
 
 
 ;I'm keeping in touch with Mozilla on Facebook and Twitter instead.
-I'm keeping in touch with Mozilla on Facebook and Twitter instead.
+I'm keeping in touch with Mozilla on Facebook and Twitter instead. {ok}
 
 
 ;Submit
-Submit
+Submit {ok}
 
 
 ;Thanks for telling us why you’re leaving.
-Thanks for telling us why you’re leaving.
+Thanks for telling us why you’re leaving. {ok}
+
+
+;Mozilla Newsletters
+Mozilla Newsletters {ok}
+
+
+;Thanks! Please check your inbox to confirm your subscription.
+Thanks! Please check your inbox to confirm your subscription. {ok}
+
+
+;You'll receive an email from mozilla@e.mozilla.org to confirm your subscription. If you don't see it, check your spam filter. You must confirm your subscription to receive our newsletter.
+You'll receive an email from mozilla@e.mozilla.org to confirm your subscription. If you don't see it, check your spam filter. You must confirm your subscription to receive our newsletter. {ok}
+
+
+;Please be sure to add our sending address: mozilla@e.mozilla.org to your address book to ensure we always reach your inbox.
+Please be sure to add our sending address: mozilla@e.mozilla.org to your address book to ensure we always reach your inbox. {ok}
