snippets lang file Catalan (ca) localisation
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@107278 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/ca/snippets.lang
+++ b/ca/snippets.lang
@@ -122,26 +122,26 @@ Feu servir el Firefox en diversos ordinadors? Ara podeu sincronitzar els complem
 
 
 ;Fast, fast, fast. <a %s>Firefox for Android just got a big upgrade</a>. Help us spread the word.
-Fast, fast, fast. <a %s>Firefox for Android just got a big upgrade</a>. Help us spread the word.
+Ràpid, Ràpid, Ràpid. El <a %s>Firefox per a l'Android s'acaba d'actualitzar</a>. Ajudeu-nos a fer córrer la veu.
 
 
 ;Firefox has new features to make getting to your next task even faster! <a href="%">Check out the video to learn more.</a>
-Firefox has new features to make getting to your next task even faster! <a href="%">Check out the video to learn more.</a>
+El Firefox té noves funcions perquè comenceu la següent tasca encara més ràpid! <a href="%">Vegeu el vídeo per saber-ne més.</a>
 
 
 ;Love Firefox Beta? <a href="%s">Invite your friends</a> to get a sneak peek of what's coming soon to Firefox.
-Love Firefox Beta? <a href="%s">Invite your friends</a> to get a sneak peek of what's coming soon to Firefox.
+Us encanta el Firefox Beta? <a href="%s">Convideu els amics</a> a fer un tastet del que hi haurà pròximament al Firefox.
 
 
 ;I use Firefox Beta to get a sneak peek at the latest features and innovations coming soon to Firefox. <a href="%s">Check it out</a>.
-I use Firefox Beta to get a sneak peek at the latest features and innovations coming soon to Firefox. <a href="%s">Check it out</a>.
+Utilitzo el Firefox Beta per fer un tastet de les darreres funcions i innovacions que hi haurà pròximament al Firefox. <a href="%s">Vegeu-ho</a>.
 
 
 ;Thanks for using Firefox Beta to help make Firefox more awesome. Now <a href="%s">invite your friends</a> to give it a try.
-Thanks for using Firefox Beta to help make Firefox more awesome. Now <a href="%s">invite your friends</a> to give it a try.
+Gràcies per utilitzar el Firefox Beta per ajudar a fer el Firefox encara més fantàstic. Ara <a href="%s">convideu els amics</a> a provar-ho.
 
 
 ;I use Firefox Beta to help test the latest features and make Firefox more awesome. <a href="%s">Give it a try</a>.
-I use Firefox Beta to help test the latest features and make Firefox more awesome. <a href="%s">Give it a try</a>.
+Utilitzo el Firefox Beta per ajudar a provar les darreres funcions i fer el Firefox encara més fantàstic. <a href="%s">Proveu-ho</a>.
 
 
