newsletter lang file Catalan (ca) partial localisation
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@107281 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/ca/newsletter.lang
+++ b/ca/newsletter.lang
@@ -78,7 +78,7 @@ Voleu rebre la informació més rellevant? Introduïu alguna dada vostra més i,
 
 
 ;Firefox & You
-Firefox & You
+Firefox & Vosaltres
 
 
 ;Our Other Newsletters:
@@ -86,55 +86,55 @@ Altres butlletins nostres:
 
 
 ;Get the latest tips and tricks for getting the most out of your favorite browser.
-Get the latest tips and tricks for getting the most out of your favorite browser.
+Aconseguiu els darrers trucs i consells per aprofitar al màxim el vostre navegador preferit.
 
 
 ;Firefox Mobile
-Firefox Mobile
+Firefox Mòbil
 
 
 ;Learn about the hottest new add-ons and features for Firefox mobile.
-Learn about the hottest new add-ons and features for Firefox mobile.
+Més informació sobre els nous complements i funcions pel Firefox mòbil.
 
 
 ;Beta News
-Beta News
+Novetats de la Beta
 
 
 ;Read about the latest features for Firefox desktop and mobile before the final release.
-Read about the latest features for Firefox desktop and mobile before the final release.
+Llegiu sobre les darreres funcions del Firefox per l'ordinador i pel mòbil abans de la versió final.
 
 
 ;Let’s Be Friends!
-Let’s Be Friends!
+Siguem amics!
 
 
 ;Firefox is also on your favorite social networking sites. Connect with us and join the conversation.
-Firefox is also on your favorite social networking sites. Connect with us and join the conversation.
+El Firefox també és a les vostres xarxes socials preferides. Connecteu-vos amb nosaltres i afegiu-vos a la conversa.
 
 
 ;Manage your <span>Newsletter Subscriptions</span>
-Manage your <span>Newsletter Subscriptions</span>
+Gestiona les <span>subscripcions a butlletins</span>
 
 
 ;Subscribe
-Subscribe
+Subscriu-me
 
 
 ;Unsubscribe
-Unsubscribe
+Cancel·la la subscripció
 
 
 ;Check here if you’d like to be removed from all Mozilla emails
-Check here if you’d like to be removed from all Mozilla emails
+Marqueu la casella si no voleu rebre més correus de Mozilla
 
 
 ;Remove me from all Mozilla emails
-Remove me from all Mozilla emails
+Exclou-me de tots els correus electrònics de Mozilla
 
 
 ;Save Preferences
-Save Preferences
+Desa les preferències
 
 
 ;Thanks for updating your email preferences.
