newsletter lang file Catalan (ca) localisation
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@107285 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/ca/newsletter.lang
+++ b/ca/newsletter.lang
@@ -138,58 +138,58 @@ Desa les preferències
 
 
 ;Thanks for updating your email preferences.
-Thanks for updating your email preferences.
+Gràcies per actualitzar les preferències del correu electrònic.
 
 
 ;You've been unsubscribed.
-You've been unsubscribed.
+S'ha cancel·lat la vostra subscripció.
 
 
 ;We’re sorry to see you go. Would you mind telling us why you’re leaving?
-We’re sorry to see you go. Would you mind telling us why you’re leaving?
+Ens sap greu que marxeu. Podríeu dir-nos per què?
 
 
 ;You send too many emails.
-You send too many emails.
+M'envieu massa correus electrònics.
 
 
 ;Your content wasn't relevant to me.
-Your content wasn't relevant to me.
+Els vostres continguts no em semblaven rellevants.
 
 
 ;Your email design was too hard to read.
-Your email design was too hard to read.
+El disseny del correu electrònic el feia difícil de llegir.
 
 
 ;I didn't sign up for this.
-I didn't sign up for this.
+No m'havia subscrit a això.
 
 
 ;I'm keeping in touch with Mozilla on Facebook and Twitter instead.
-I'm keeping in touch with Mozilla on Facebook and Twitter instead.
+Estic en contacte amb Mozilla a través del Facebook i del Twitter, en lloc de per correu electrònic.
 
 
 ;Submit
-Submit
+Tramet
 
 
 ;Thanks for telling us why you’re leaving.
-Thanks for telling us why you’re leaving.
+Gràcies per dir-nos per què marxeu.
 
 
 ;Mozilla Newsletters
-Mozilla Newsletters
+Butlletins de notícies de Mozilla
 
 
 ;Thanks! Please check your inbox to confirm your subscription.
-Thanks! Please check your inbox to confirm your subscription.
+Gràcies! Comproveu la vostra bústia per confirmar la subscripció.
 
 
 ;You'll receive an email from mozilla@e.mozilla.org to confirm your subscription. If you don't see it, check your spam filter. You must confirm your subscription to receive our newsletter.
-You'll receive an email from mozilla@e.mozilla.org to confirm your subscription. If you don't see it, check your spam filter. You must confirm your subscription to receive our newsletter.
+Rebreu un correu electrònic de mozilla@e.mozilla.org per confirmar la vostra subscripció. Si no el veieu, comproveu el filtre del correu brossa. Cal que confirmeu la subscripció per rebre el butlletí.
 
 
 ;Please be sure to add our sending address: mozilla@e.mozilla.org to your address book to ensure we always reach your inbox.
-Please be sure to add our sending address: mozilla@e.mozilla.org to your address book to ensure we always reach your inbox.
+Afegiu la nostra adreça mozilla@e.mozilla.org a l'agenda per assegurar-vos que els nostres missatges sempre aniran a la safata d'entrada.
 
 
