mobile lang file Catalan (ca) localisation
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@107321 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/ca/mobile.lang
+++ b/ca/mobile.lang
@@ -62,70 +62,70 @@ Gratuït des de l'iTunes
 
 
 ;You’ll get to experience cutting-edge features and provide feedback to help refine and polish what will be in the final release.
-You’ll get to experience cutting-edge features and provide feedback to help refine and polish what will be in the final release.
+Podreu provar funcions d'avantguarda i enviar comentaris per ajudar a refinar i polir el que serà en la versió final.
 
 
 ;Developer Tools
-Developer Tools
+Eines per desenvolupadors
 
 
 ;You can install the mobile version of Firefox to our desktop computer in order to test, provide feedback, and build add-ons.
-You can install the mobile version of Firefox to our desktop computer in order to test, provide feedback, and build add-ons.
+Podeu instal·lar la versió mòbil del Firefox al nostre ordinador de taula per provar-lo, enviar comentaris i fer complements.
 
 
 ;Connect With Firefox for Mobile:
-Connect With Firefox for Mobile:
+Connecteu-vos amb el Firefox per a mòbil
 
 
 ;Monthly newsletter
-Monthly newsletter
+Butlletí mensual
 
 
 ;Follow us
-Follow us
+Seguiu-nos
 
 
 ;Become a fan
-Become a fan
+Feu-vos-en admirador
 
 
 ;Firefox is full of innovations that let you type less, browse more and get to the Web quickly and easily.
-Firefox is full of innovations that let you type less, browse more and get to the Web quickly and easily.
+El Firefox està ple d'innovacions que us permeten escriure menys, navegar més i arribar al web ràpidament i fàcil.
 
 
 ;Freedom from typing
-Freedom from typing
+Llibertat per escriure
 
 
 ;The Awesome Screen learns your favorite sites so you can browse with little or no typing.
-The Awesome Screen learns your favorite sites so you can browse with little or no typing.
+La pantalla fantàstica aprèn els vostres llocs preferits perquè hàgiu d'escriure poc o gens per navegar.
 
 
 ;Best of both worlds
-Best of both worlds
+El millor dels dos móns
 
 
 ;Firefox for Android is now redesigned and optimized for the way you browse on phones and tablets.
-Firefox for Android is now redesigned and optimized for the way you browse on phones and tablets.
+El Firefox per a l'Android està ara redissenyat i optimitzat per la manera en què navegueu amb telèfons i tauletes.
 
 
 ;Browse quick and easy
-Browse quick and easy
+Navegueu ràpidament i fàcil
 
 
 ;Features like Sync, tabbed browsing and one-touch bookmarking mean everything you want is close at hand.
-Features like Sync, tabbed browsing and one-touch bookmarking mean everything you want is close at hand.
+Funcions com la sincronització, la navegació amb pestanyes i el poder afegir les adreces d'interès amb un sol toc fan que tot sigui a l'abast.
 
 
 ;<a %s>Need help?</a> Visit our Firefox for Android Support site.
-<a %s>Need help?</a> Visit our Firefox for Android Support site.
+<a %s>Us cal ajuda?</a> Visiteu el nostre lloc d'assistència del Firefox per a l'Android
 
 
 ;Download and test the build that’s right for you.
-Download and test the build that’s right for you.
+Baixeu i proveu el muntatge que us sigui més adient.
 
 
 ;See all our channels for mobile »
-See all our channels for mobile »
+Vegeu tots els nostres canals pel mòbil »
 
 
