localisation of the firefox 13 video subtitles
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@107323 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/ca/videos/video_fx13.lang
+++ b/ca/videos/video_fx13.lang
@@ -1,42 +1,42 @@
 ;[What's New in Firefox] It's now easier and faster to get where you want to go with the latest Firefox.
-[What's New in Firefox] It's now easier and faster to get where you want to go with the latest Firefox.
+[Novetats en el Firefox] Ara és més fàcil i ràpid arribar on voleu anar amb el darrer Firefox.
 
 
 ;With the redesigned Home page you can now easily access and navigate to your most commonly used menu options.
-With the redesigned Home page you can now easily access and navigate to your most commonly used menu options.
+amb el nou disseny de la pàgina d'inici, podeu accedir i navegar fàcilment pels menús que més utilitzeu,
 
 
 ;Like downloads, bookmarks, history, add-ons, sync and settings.
-Like downloads, bookmarks, history, add-ons, sync and settings.
+com les baixades, les adreces d'interès, l'historial, els  complements, la sincronització i les preferències.
 
 
 ;[New Tab Page] We've also added improvements to your New Tab page.
-[New Tab Page] We've also added improvements to your New Tab page.
+[Pàgina de nova pestanya] També hem millorat la pàgina de nova pestanya.
 
 
 ;With the New Tab page, you can now easily navigate to your most recent and frequently visited sites in one click.
-With the New Tab page, you can now easily navigate to your most recent and frequently visited sites in one click.
+La pàgina de nova pestanya us permet navegar amb un sol clic pels llocs en què acabeu d'entrar i pels que soleu visitar.
 
 
 ;To start using the New Tab page, create a new tab by clicking the '+' at the top of your browser.
-To start using the New Tab page, create a new tab by clicking the '+' at the top of your browser.
+Per començar a usar la pàgina de nova pestanya,  feu clic en el «+» de la part superior del navegador i s'obrirà una pestanya nova.
 
 
 ;The New Tab page will now display thumbnails of your most recently and frequently visited websites from your Awesome Bar history.
-The New Tab page will now display thumbnails of your most recently and frequently visited websites from your Awesome Bar history.
+La pàgina de nova pestanya mostrarà miniatures dels llocs més recents o freqüents segons l'historial de la barra fantàstica.
 
 
 ;You can customize your New Tab page by dragging the thumbnails around to change the order.
-You can customize your New Tab page by dragging the thumbnails around to change the order.
+Podeu personalitzar la pàgina de nova pestanya arrossegant les miniatures per canviar-ne l'ordre.
 
 
 ;Click on the pushpin to lock the site into place, or the 'X' button to remove a site.
-Click on the pushpin to lock the site into place, or the 'X' button to remove a site.
+Feu clic en la xinxeta per blocar la ubicació d'un lloc o en el botó «X» per eliminar-lo.
 
 
 ;You can also click the 'grid' icon in the top right of the page to go back to the blank new Tab page.
-You can also click the 'grid' icon in the top right of the page to go back to the blank new Tab page.
+També podeu fer clic en la icona «agrupa les pestanyes», a la part superior dreta, per tornar a la pàgina buida de nova pestanya.
 
 
 ;Get the latest Firefox now and start using these new features today!
-Get the latest Firefox now and start using these new features today!
+Baixeu-vos el darrer Firefox i comenceu a usar totes aquestes noves funcions avui mateix!
