l10n: fr, updated whatsnew file
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@107379 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/fr/whatsnew.lang
+++ b/fr/whatsnew.lang
@@ -61,3 +61,35 @@ Aidez Mozilla
 Le robot Android est inspiré d'une œuvre créée et <a href="%s">partagée par Google</a> et est utilisé selon les conditions décrites par sa licence <a href="%s">Creative Commons 3.0</a>.
 
 
+
+
+;<a href="%s">Get Firefox for Android</a> and put the power of the Web in your hands. It’s fast, smart and safe!
+<a href="%s">Adoptez Firefox pour Android</a> et gardez la puissance du web à portée de main. Il est rapide, sûr et malin&nbsp;!
+
+
+;Now get the mobile browser that’s got your back
+Adoptez maintenant le navigateur mobile qui assure vos arrières.
+
+
+;Firefox Features
+Fonctionnalités de Firefox
+
+
+;Welcome to Firefox
+Bienvenue dans Firefox
+
+
+;Firefox Help
+Assistance pour Firefox
+
+
+;Get the mobile browser that’s got your back.
+Adoptez le navigateur mobile qui assure vos arrières.
+
+
+;Firefox for Android artwork
+Illustration Firefox pour Android
+
+
+;Fast. Smart. Safe.
+Rapide. Sûr. Malin.
