--- a/eo/whatsnew.lang
+++ b/eo/whatsnew.lang
@@ -62,38 +62,37 @@ La rotobo de Android estis produktita el verko kreita kaj <a href="%s">disponigi
 
 
 ;<a href="%s">Get Firefox for Android</a> and put the power of the Web in your hands. It’s fast, smart and safe!
-<a href="%s">Get Firefox for Android</a> and put the power of the Web in your hands. It’s fast, smart and safe!
+<a href="%s">Ricevu Firefox por Android</a> kaj metu la povon de la Teksaĵo en viajn manojn.  Ĝi estas rapida, inteligenta kaj sekura!
 
 
 ;Now get the mobile browser that’s got your back
-Now get the mobile browser that’s got your back
+Ricevu nun la porteblan retesplorilon kiu protektas vin
 
 
 ;Firefox Features
-Firefox Features
+Trajtoj de Firefox
 
 
 # This is the tab title
 ;Welcome to Firefox
-Welcome to Firefox
+Bonvenon al Firefox
 
 
 ;Firefox Help
-Firefox Help
+Helpo por Firefox
 
 
 # This is the alternate text for the Android image for blind people
 ;Firefox for Android artwork
-Firefox for Android artwork
+Artaĵoj de Firefox por Android
 
 
 # Firefox for Android slogan, part of the fallback if we don't have a promotional video ready
 ;Fast. Smart. Safe.
-Fast. Smart. Safe.
+Rapida. Inteligenta. Sekura.
 
 
 # This message is displayed as a fallback if we don't have a promotional video ready
 ;Get the mobile browser that’s got your back.
-Get the mobile browser that’s got your back.
-
+Ricevu la porteblan retesplorilon kiu protektas vin
 
