--- a/eo/whatsnew.lang
+++ b/eo/whatsnew.lang
@@ -94,5 +94,5 @@ Rapida. Inteligenta. Sekura.
 
 # This message is displayed as a fallback if we don't have a promotional video ready
 ;Get the mobile browser that’s got your back.
-Ricevu la porteblan retesplorilon kiu protektas vin
+Ricevu la porteblan retesplorilon kiu protektas vin.
 
