--- a/de/whatsnew.lang
+++ b/de/whatsnew.lang
@@ -62,38 +62,38 @@ Das Android-Maskottchen wurde aus einem Werk abgeleitet, das <a href="%s">von Go
 
 
 ;<a href="%s">Get Firefox for Android</a> and put the power of the Web in your hands. It’s fast, smart and safe!
-<a href="%s">Get Firefox for Android</a> and put the power of the Web in your hands. It’s fast, smart and safe!
+<a href="%s">Holen Sie sich Firefox für Android</a> und nehmen Sie die Kraft des Internets in die Hand. Er ist schnell, intelligent und sicher!
 
 
 ;Now get the mobile browser that’s got your back
-Now get the mobile browser that’s got your back
+Holen Sie sich jetzt den Browser, der Sie beschützt
 
 
 ;Firefox Features
-Firefox Features
+Funktionen von Firefox
 
 
 # This is the tab title
 ;Welcome to Firefox
-Welcome to Firefox
+Willkommen bei Firefox
 
 
 ;Firefox Help
-Firefox Help
+Firefox-Hilfe
 
 
 # This is the alternate text for the Android image for blind people
 ;Firefox for Android artwork
-Firefox for Android artwork
+Grafik: Firefox für Android
 
 
 # Firefox for Android slogan, part of the fallback if we don't have a promotional video ready
 ;Fast. Smart. Safe.
-Fast. Smart. Safe.
+Schnell. Intelligent. Sicher
 
 
 # This message is displayed as a fallback if we don't have a promotional video ready
 ;Get the mobile browser that’s got your back.
-Get the mobile browser that’s got your back.
+Holen Sie sich den Browser für Mobilgeräte, der Sie beschützt
 
 
